<?xml version="1.0"?>
<package>
  <name>random_walker_auto_docking</name>
  <version>0.0.0</version>
  <description>The random_walker_auto_docking package</description>
  <maintainer email="joaopereira.19@gmai.com">João Pereira</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
    <!-- The export tag contains other, unspecified, tags -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
