<?xml version="1.0"?>
<package>
  <name>rwad2</name>
  <version>0.0.0</version>
  <description>The rwad2 package</description>

  <maintainer email="joaopereira_19@hotmail.com">joao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlibactionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlibactionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
