<?xml version="1.0"?>
<package>
  <name>wifi_info</name>
  <version>0.0.0</version>
  <description> This package provides a node that publishes info about wifi-signal nearby </description>

  <maintainer email="a75273@alunos.uminho.pt"> João Pereira </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export> </export>
</package>
